# news-labelling

./: .gitignore  .pylintrc  CHANGELOG.md  GUIDELINES.md  Pipfile  Pipfile.bkp  Pipfile.lock.bkp  README.md  manage.py  pyproject.toml
.github/workflows/: run_tests.yml
api/: apps.py  factories.py  metrics.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200906_1936.py  0003_comment.py  0004_auto_20200907_1353.py  0005_commentlabel.py  0006_articlelabel.py  0007_commentlabel_article_label.py  0008_auto_20200910_1737.py  0009_assignment.py  0010_auto_20200910_2025.py  0011_commentlabel_type.py  0012_auto_20200913_0036.py  0013_auto_20200926_1902.py  0014_auto_20200928_1439.py  0015_auto_20201023_1353.py  0016_auto_20201026_1526.py  0017_articlelabel_metadata.py  0018_article_metadata.py  0019_batch_batcharticle.py  (+15 more)
data/: 100_selection.json  demo_ids.json  interview_ids.json  to_be_selected.json  training_ids.json
dataset/: __init__.py  article_serializer.py  comment_serializer.py  tests.py
frontend/: apps.py  dashboard_views.py  ranking.py  report.py  urls.py  views.py
news_labelling/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: Agreements - All.ipynb  Agreements - Batch 1.ipynb  Agreements - Batch 7.ipynb  Agreements - Interview.ipynb  Agreements - Training.ipynb  Agreements.ipynb  Annotator Similarity.ipynb  Batch Report.ipynb  Dataset.ipynb  Devoluciones.md  Estimation 2nd and 3rd annotation.ipynb  Non interesting articles.ipynb  Partition.ipynb  Time.ipynb  test_ids.json
output/: README.md
(+58 files in other folders)
