[tool.poetry]
name = "news-labelling"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
krippendorff = "^0.5.1"
djangorestframework = "^3.13.1"
fire = "^0.4.0"
tqdm = "^4.64.0"
nltk = "^3.7"
Markdown = "^3.3.7"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
